footwear model,prod.service,prod.page update

--- a/src/app/core/components/single-item/single-item.component.html
+++ b/src/app/core/components/single-item/single-item.component.html
@@ -1,1 +1,8 @@
-<p>single-item works!</p>
+<div class="col-12">
+  <div class="col-6">
+    <img src="" alt="" class="img-fluid">
+  </div>
+  <div class="col-6">
+
+  </div>
+</div>
