Font,toolbar,footer update

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,1 +1,30 @@
-<p>footer works!</p>
+<div class="container-fluid">
+  <div class="col-12 d-flex flex-wrap footer-content">
+    <div class="col-md-3">
+      <div class="newsletter">
+        <p>SUBSCRIBE TO OUR NEWSLETTER</p>
+        <div class="subscribe-inputs d-flex flex-wrap ">
+          <input type="email" placeholder="enter your email"/>
+          <button>SUBSCRIBE</button>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <p><b>CUSTOMER CARE</b></p>
+      <p>HELP</p>
+    </div>
+    <div class="col-md-3">
+      <p><b>LA PISTA</b></p>
+      <p>ABOUT US</p>
+      <p>CONTACT</p>
+      <p>PRIVACY</p>
+      <p>COOKIE</p>
+    </div>
+    <div class="col-md-3">
+      <p><b>SHOPPING ONLINE</b></p>
+      <p>PAYMENTS METHOD</p>
+      <p>SHIPPING METHOD</p>
+      <p>RETURN POLICY</p>
+    </div>
+  </div>
+</div>
