DataService,Contact module,form * connected to heroku NestJs with MySql * added contact module and contact component

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid my-3">
   <div class="col-12 d-flex flex-wrap footer-content">
     <div class="col-md-3">
       <div class="newsletter">
@@ -27,4 +27,7 @@
       <p>RETURN POLICY</p>
     </div>
   </div>
+</div>
+<div class="container-fluid text-center d-flex align-items-center justify-content-center" style="border-top: 1px solid #606060;height: 40px">
+  <p style="font-size: 12px;">© Copyright 2019 - Identità s.r.l - P.IVA 07966160728</p>
 </div>
