[little fixes,added Product-detail module] * added 2 components for product-detail

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid my-3">
+<div class="container-fluid my-3 mt-5">
   <div class="col-12 d-flex flex-wrap footer-content">
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-6">
       <div class="newsletter">
         <p>SUBSCRIBE TO OUR NEWSLETTER</p>
         <div class="subscribe-inputs d-flex flex-wrap ">
@@ -9,18 +9,18 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-6">
       <p><b>CUSTOMER CARE</b></p>
       <p>HELP</p>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-6">
       <p><b>LA PISTA</b></p>
       <p>ABOUT US</p>
       <p>CONTACT</p>
       <p>PRIVACY</p>
       <p>COOKIE</p>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3 col-sm-6">
       <p><b>SHOPPING ONLINE</b></p>
       <p>PAYMENTS METHOD</p>
       <p>SHIPPING METHOD</p>
