--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -1,19 +1,19 @@
 <div class="container fluid mt-5">
   <div class="container">
-    <div class="row">
-      <div class="col-4 d-flex justify-content-center">
+    <div class="col-lg-12 d-flex flex-wrap">
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
        <div class="d-flex flex-column">
          <p><b>PHONE</b></p>
          <a href="tel:+39 0883 198 5747">+39 0883 198 5747</a>
        </div>
       </div>
-      <div class="col-4 d-flex justify-content-center">
+      <div class="col-lg-4 col-md-6 d-flex justify-content-center">
         <div class="d-flex flex-column">
           <p><b>WHATSAPP</b></p>
           <a href="tel:+39 0883 198 5747">+39 0883 198 5747</a>
         </div>
       </div>
-      <div class="col-4 d-flex justify-content-center">
+      <div class="col-lg-4 col-md-12 d-flex justify-content-center">
         <div class="d-flex flex-column">
           <p><b>WRITE US</b></p>
           <p style="font-size: 12px">We aim to respond within 24 hours, however, during busy periods like holidays, sales and special campaigns we may take a little longer getting back to you.</p>
