[update Product & Product-detail module] * updated Product-detail-text & image

--- a/src/app/modules/product-detail/pages/product-detail.component.html
+++ b/src/app/modules/product-detail/pages/product-detail.component.html
@@ -1,20 +1,20 @@
 <div class="container-fluid">
   <div class="container">
 
-    <div class="col-lg-12 d-flex flex-wrap">
+    <div class="col-lg-12 d-flex flex-wrap" *ngIf="singleDataObject">
       <div class="col-lg-6 w-50">
-        <!--          <app-product-img-->
-        <!--            *ngIf="data"-->
-        <!--            [detailImage]="data[0]">-->
-        <!--          </app-product-img>-->
-        <app-product-text
-          *ngIf="data"
-          [detailText]="data[1]"></app-product-text>
+                  <app-product-img
+                    *ngIf="singleDataObject"
+                    [detailImage]="singleDataObject.image">
+                  </app-product-img>
+<!--        <app-product-text-->
+<!--          *ngIf="data"-->
+<!--          [detailText]="singleDataObject"></app-product-text>-->
       </div>
       <div class="col-lg-6 w-50">
         <app-product-text
-          *ngIf="data"
-          [detailText]="data[1]"></app-product-text>
+          *ngIf="singleDataObject"
+          [detailText]="singleDataObject"></app-product-text>
       </div>
     </div>
 
