--- a/src/app/core/components/product-detail-image/product-detail-image.component.html
+++ b/src/app/core/components/product-detail-image/product-detail-image.component.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<img [src]="detailImage" alt="" style="height: 200px;width: 200px;object-fit: cover">
