[SendMail service and component] * added SendMail service endpoint * added get Item By Id service endpoint * little fixes

--- a/src/app/core/components/contact-form/contact-form.component.html
+++ b/src/app/core/components/contact-form/contact-form.component.html
@@ -9,72 +9,84 @@
       </p>
     </div>
     <div class="form" style="width: 100%;">
-      <div class="d-flex flex-wrap">
-        <div class="col-12 flex-grow-1">
-          <mat-form-field class="example-full-width">
-            <mat-label>Message</mat-label>
-            <input
-              matInput
-              #name
-              maxlength="256"
-              placeholder="Ex. I need help with..."
-            />
-            <mat-hint align="start"
-              ><strong>Don't disclose personal info</strong></mat-hint
-            >
-            <mat-hint align="end">{{ name.value.length }} / 20</mat-hint>
-          </mat-form-field>
-        </div>
-        <div class="col-12 flex-grow-1">
-          <mat-form-field class="example-full-width">
-            <mat-label>Message</mat-label>
-            <input
-              matInput
-              #phone
-              maxlength="256"
-              placeholder="Ex. I need help with..."
-            />
-            <mat-hint align="start"
-              ><strong>Don't disclose personal info</strong></mat-hint
-            >
-            <mat-hint align="end">{{ phone.value.length }} / 50</mat-hint>
-          </mat-form-field>
-        </div>
-        <div class="col-12 flex-grow-1">
-          <mat-form-field class="example-full-width">
-            <mat-label>Message</mat-label>
-            <input
-              matInput
-              #email
-              maxlength="256"
-              placeholder="Ex. I need help with..."
-            />
-            <mat-hint align="start"
-              ><strong>Don't disclose personal info</strong></mat-hint
-            >
-            <mat-hint align="end">{{ email.value.length }} / 100</mat-hint>
-          </mat-form-field>
-        </div>
-        <div class="col-12 flex-grow-1">
-          <mat-form-field appearance="outline" class="example-full-width">
-            <mat-label>Upisite vasu poruku</mat-label>
-            <input matInput placeholder="Vasa poruku" />
-            <!--            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>-->
-            <!--            <mat-hint>Hint</mat-hint>-->
-          </mat-form-field>
-        </div>
-      </div>
 
-      <div class="row d-flex justify-content-center">
-        <button
-          mat-stroked-button
-          color="primary"
-          class="my-3"
-          style="width: 250px; height: 40px;"
-        >
-          SEND
-        </button>
-      </div>
+      <form action="" [formGroup]="sendMailForm">
+        <div class="d-flex flex-wrap">
+          <div class="col-12 flex-grow-1">
+            <mat-form-field class="example-full-width">
+              <mat-label>Name</mat-label>
+              <input
+                matInput
+                #name
+                maxlength="256"
+                placeholder="Ex. I need help with..."
+                formControlName="name"
+              />
+              <mat-hint align="start"
+              ><strong>write real personal info</strong></mat-hint
+              >
+              <mat-hint align="end">{{ name.value.length }} / 20</mat-hint>
+            </mat-form-field>
+          </div>
+          <div class="col-12 flex-grow-1">
+            <mat-form-field class="example-full-width">
+              <mat-label>Email</mat-label>
+              <input
+                matInput
+                #email
+                maxlength="50"
+                placeholder="Ex. I need help with..."
+                formControlName="email"
+              />
+              <mat-hint align="start"
+              ><strong>write real personal info</strong></mat-hint
+              >
+              <mat-hint align="end">{{ email.value.length }} / 50</mat-hint>
+            </mat-form-field>
+          </div>
+          <div class="col-12 flex-grow-1">
+            <mat-form-field class="example-full-width">
+              <mat-label>Subject</mat-label>
+              <input
+                matInput
+                #subject
+                maxlength="50"
+                placeholder="Ex. I need help with..."
+                formControlName="subject"
+              />
+              <mat-hint align="start"
+              ><strong>write real personal info</strong></mat-hint
+              >
+              <mat-hint align="end">{{ email.value.length }} / 50</mat-hint>
+            </mat-form-field>
+          </div>
+          <div class="col-12 flex-grow-1">
+            <mat-form-field appearance="outline" class="example-full-width">
+              <mat-label>Message</mat-label>
+              <input
+                matInput
+                placeholder="Vasa poruku"
+                formControlName="message"
+              />
+              <!--            <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>-->
+              <!--            <mat-hint>Hint</mat-hint>-->
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="row d-flex justify-content-center">
+          <button
+            mat-stroked-button
+            color="primary"
+            class="my-3"
+            style="width: 250px; height: 40px;"
+            (click)="sendMail()"
+            [disabled]="!sendMailForm.valid"
+          >
+            SEND
+          </button>
+        </div>
+      </form>
       <!--      <button mat-stroked-button>Basic</button>-->
     </div>
   </div>
