[Product detail image fix] * change color of item,reflect to image

--- a/src/app/core/components/product-detail-image/product-detail-image.component.html
+++ b/src/app/core/components/product-detail-image/product-detail-image.component.html
@@ -1,1 +1,5 @@
-<img [src]="detailImage" alt="" style="height: 200px;width: 200px;object-fit: cover">
+<img
+  [src]="detailImage"
+  alt=""
+  style="height: 300px; width: 300px; object-fit: cover;"
+/>
