[Added components for HomeModule/Home page] * fixed styles footer,global and ... * Added home-three-images,home-four-images

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid my-3 mt-5">
+<div class="container-fluid mt-5 py-5" style="border-top:1px solid #606060">
   <div class="col-12 d-flex flex-wrap footer-content">
     <div class="col-md-3 col-sm-6">
       <div class="newsletter">
