[Style fixes] * little style fixes product page

--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -1,14 +1,15 @@
-
 <div class="container-fluid my-5">
   <div class="container">
     <div class="col-12">
       <div class="d-flex flex-column align-items-center">
-        <h3><b>JOIN THE NEWSLETTER AND CLAIM 15% DISCOUNT ON YOUR FIRST ORDER</b></h3>
+        <h3 class="text-center">
+          <b>JOIN THE NEWSLETTER AND CLAIM 15% DISCOUNT ON YOUR FIRST ORDER</b>
+        </h3>
         <p>Keep yourself updated with the latest news and gain 15% discount</p>
         <div class="newsletter">
           <p>SUBSCRIBE TO OUR NEWSLETTER</p>
-          <div class="subscribe-inputs d-flex flex-wrap ">
-            <input type="email" placeholder="enter your email"/>
+          <div class="subscribe-inputs d-flex flex-wrap">
+            <input type="email" placeholder="enter your email" />
             <button>SUBSCRIBE</button>
           </div>
         </div>
@@ -19,17 +20,49 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 d-flex flex-wrap">
-      <div class="col-lg-3 one-of-four">
-        <img src="https://identitashoes.it/4imghome/1.jpg" alt="" class="img-fluid" [routerLink]="'/products'">
+      <div class="col-lg-3 col-md-6 one-of-four">
+        <img
+          src="https://identitashoes.it/4imghome/1.jpg"
+          alt=""
+          class="img-fluid position-relative"
+          [routerLink]="'/products'"
+        />
+        <div class="image-overlay">
+          <p>Img Overlay</p>
+        </div>
       </div>
-      <div class="col-lg-3 one-of-four">
-        <img src="https://identitashoes.it/4imghome/2.jpg" alt="" class="img-fluid" [routerLink]="'/products'">
+      <div class="col-lg-3 col-md-6 one-of-four">
+        <img
+          src="https://identitashoes.it/4imghome/2.jpg"
+          alt=""
+          class="img-fluid position-relative"
+          [routerLink]="'/products'"
+        />
+        <div class="image-overlay">
+          <p>Img Overlay</p>
+        </div>
       </div>
-      <div class="col-lg-3 one-of-four">
-        <img src="https://identitashoes.it/4imghome/3.jpg" alt="" class="img-fluid" [routerLink]="'/products'">
+      <div class="col-lg-3 col-md-6 one-of-four">
+        <img
+          src="https://identitashoes.it/4imghome/3.jpg"
+          alt=""
+          class="img-fluid position-relative"
+          [routerLink]="'/products'"
+        />
+        <div class="image-overlay">
+          <p>Img Overlay</p>
+        </div>
       </div>
-      <div class="col-lg-3 one-of-four">
-        <img src="https://identitashoes.it/4imghome/4.jpg" alt="" class="img-fluid" [routerLink]="'/products'">
+      <div class="col-lg-3 col-md-6 one-of-four">
+        <img
+          src="https://identitashoes.it/4imghome/4.jpg"
+          alt=""
+          class="img-fluid position-relative"
+          [routerLink]="'/products'"
+        />
+        <div class="image-overlay">
+          <p>Img Overlay</p>
+        </div>
       </div>
     </div>
   </div>
