--- a/src/app/core/components/home-four-images/home-four-images.component.scss
+++ b/src/app/core/components/home-four-images/home-four-images.component.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
   .subscribe-inputs {
     margin-top: 10px;
     width: 100%;
@@ -25,3 +26,26 @@
     }
   }
 }
+
+.one-of-four {
+  .image-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+
+    p {
+      font-size: 30px;
+      font-weight: bold;
+      text-transform: uppercase;
+      color: white;
+      text-shadow: black 2px 2px 5px;
+    }
+  }
+}
+
