--- a/src/app/core/components/home-three-images/home-three-images.component.html
+++ b/src/app/core/components/home-three-images/home-three-images.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="container">
     <div class="d-flex flex-column align-items-center py-3">
-      <h3><b>FALL/WINTER 2020 NEW COLLECTION</b></h3>
+      <h3 class="text-center"><b>FALL/WINTER 2020 NEW COLLECTION</b></h3>
       <p>Shop now the new collection Fall/Winter 2020!</p>
       <button style="border-radius: 0px; border: 1px solid black;height: 40px;padding: 5px 25px;background: transparent">
         Shop now!
