--- a/src/app/modules/product-detail/pages/product-detail.component.html
+++ b/src/app/modules/product-detail/pages/product-detail.component.html
@@ -1,22 +1,15 @@
 <div class="container-fluid">
   <div class="container">
-
-    <div class="col-lg-12 d-flex flex-wrap" *ngIf="singleDataObject">
+    <div class="col-lg-12 d-flex flex-wrap" *ngIf="singleDataObject && detailImage">
       <div class="col-lg-6 w-50 d-flex align-items-center justify-content-center">
-                  <app-product-img
-                    *ngIf="detailImage"
-                    [detailImage]="detailImage">
-                  </app-product-img>
-<!--        <app-product-text-->
-<!--          *ngIf="data"-->
-<!--          [detailText]="singleDataObject"></app-product-text>-->
+        <app-product-img [detailImage]="detailImage">
+        </app-product-img>
       </div>
       <div class="col-lg-6 w-50">
         <app-product-text
-          *ngIf="singleDataObject"
-          [detailText]="singleDataObject"></app-product-text>
+          [detailText]="singleDataObject"
+        ></app-product-text>
       </div>
     </div>
-
   </div>
 </div>
