[Product detail fix, App cart] * Added cart module * Product detail text updated component * logo update * product detail little fix

--- a/src/app/core/components/product-detail-text/product-detail-text.component.html
+++ b/src/app/core/components/product-detail-text/product-detail-text.component.html
@@ -1,6 +1,45 @@
-<p>{{detailText.name}}</p>
-<p>{{detailText.description}}</p>
-<p>{{detailText.price}}</p>
+<p>
+  <b>{{ detailText.name }}</b>
+</p>
+<p class="mb-2">{{ detailText.price }},00 €</p>
+<p class="mb-2">{{ detailText.description }}</p>
 <div class="d-flex flex-column">
-  <p *ngFor="let c of detailText.colors" (click)="emitChangedColor(c)">{{c.name}} + {{c.status}}</p>
+  <!--  <p *ngFor="let c of detailText.colors" (click)="emitChangedColor(c)">{{c.name}} + {{c.status}}</p>-->
+  <p class="text-uppercase"><b>COLOR: </b> {{ selectedColor?.name }}</p>
+
+  <div class="color-choice d-flex py-3">
+    <div
+      class="color-box-wrapper"
+      *ngFor="let c of detailText.colors"
+      [class.color-box-wrapper-selected]="selectedColor?.name === c?.name"
+      (click)="emitChangedColor(c)"
+    >
+      <div class="color-box mr-3" [ngStyle]="{ background: c.hex }"></div>
+    </div>
+  </div>
+
+  <div class="select-size d-flex flex-column mt-2">
+    <p class="text-uppercase mb-2">
+      <b>SIZE: </b> {{ selectedSize?.sizeName }}
+    </p>
+    <div class="shoe-numbers" *ngIf="selectedColor">
+      <button
+        class="size-number"
+        *ngFor="let s of selectedColor?.sizes"
+        (click)="selectSize(s)"
+        [class.size-number-selected]="selectedSize?.sizeName === s?.sizeName"
+      >
+        {{ s.sizeName }}
+      </button>
+    </div>
+  </div>
+</div>
+
+<div class="add-to-cart mt-3">
+  <button class="add-to-cart-button"
+          (click)="updateCart()"
+          [disabled]="!selectedSize"
+  >
+    Add to cart
+  </button>
 </div>
