--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -4,7 +4,8 @@
       <p style="font-size: 12px">Language option</p>
     </div>
     <div class="toolbar-logo d-flex justify-content-center">
-      <img src="assets/img/lapista-logo.jpg" alt="lapista-logo" class="img-fluid">
+<!--      <img src="assets/img/lapista-logo.jpg" alt="lapista-logo" class="img-fluid">-->
+      <img src="assets/img/LaPista-Logo-main.png" alt="lapista-logo" class="img-fluid" style="max-height: 40px">
     </div>
 
     <div class="col-lg-3 d-flex justify-content-end">
