--- a/src/app/core/components/contact-form/contact-form.component.html
+++ b/src/app/core/components/contact-form/contact-form.component.html
@@ -13,51 +13,33 @@
       <form action="" [formGroup]="sendMailForm">
         <div class="d-flex flex-wrap">
           <div class="col-12 flex-grow-1">
-            <mat-form-field class="example-full-width">
+            <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Name</mat-label>
               <input
                 matInput
-                #name
-                maxlength="256"
-                placeholder="Ex. I need help with..."
+                placeholder="Enter name"
                 formControlName="name"
               />
-              <mat-hint align="start"
-              ><strong>write real personal info</strong></mat-hint
-              >
-              <mat-hint align="end">{{ name.value.length }} / 20</mat-hint>
             </mat-form-field>
           </div>
           <div class="col-12 flex-grow-1">
-            <mat-form-field class="example-full-width">
+            <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Email</mat-label>
               <input
                 matInput
-                #email
-                maxlength="50"
-                placeholder="Ex. I need help with..."
+                placeholder="Enter email"
                 formControlName="email"
               />
-              <mat-hint align="start"
-              ><strong>write real personal info</strong></mat-hint
-              >
-              <mat-hint align="end">{{ email.value.length }} / 50</mat-hint>
             </mat-form-field>
           </div>
           <div class="col-12 flex-grow-1">
-            <mat-form-field class="example-full-width">
+            <mat-form-field appearance="outline" class="example-full-width">
               <mat-label>Subject</mat-label>
               <input
                 matInput
-                #subject
-                maxlength="50"
-                placeholder="Ex. I need help with..."
+                placeholder="Enter subject"
                 formControlName="subject"
               />
-              <mat-hint align="start"
-              ><strong>write real personal info</strong></mat-hint
-              >
-              <mat-hint align="end">{{ email.value.length }} / 50</mat-hint>
             </mat-form-field>
           </div>
           <div class="col-12 flex-grow-1">
