[Product image , other style fixes] * Initial product image fix getting from .colors[0].image * contact form validator req for email * about page text style * decrement size service

--- a/src/app/core/components/product-detail-text/product-detail-text.component.html
+++ b/src/app/core/components/product-detail-text/product-detail-text.component.html
@@ -28,6 +28,9 @@
         *ngFor="let s of selectedColor?.sizes"
         (click)="selectSize(s)"
         [class.size-number-selected]="selectedSize?.sizeName === s?.sizeName"
+        [class.size-number-disabled]="s.sizeCount === 0"
+        [ngStyle]="{'text-decoration' : s.sizeCount === 0 ? 'line-through' : 'none'}"
+        [disabled]="s.sizeCount === 0"
       >
         {{ s.sizeName }}
       </button>
