--- a/src/app/modules/about/pages/about.component.html
+++ b/src/app/modules/about/pages/about.component.html
@@ -3,29 +3,39 @@
     <h3 class="mb-2">OUR STORY</h3>
     <p class="mb-3"><b>Where passion can lead you?</b></p>
 
-    <p>
-      Everyone asked to himself this question at least once in life, the answer we found looking back on our history can
-      be resumed in the Gracian quote : "Passion colors everything it touches.”
-      <br>
-      Starting from the crafted production where every single shoes is refined by hand passing by the obsessive research
-      of the finest material crossing the deepest desire of woman, with the unique packaging, every single shoes is an
-      experience of style.
-      <br>
-      Identità srl is created in the headquarter of Trani ( bt) in the departments of graphic, customer service,
-      marketing e buying. Our production is made all around Italy, by the best crafters.
-      <br>
-      Orders are shipped world wide from our warehouses in box made with the maximum of the attention to every detail,
-      with our certification of autenticity, dust bag and accessories.
-      <br>
-      The box is branded with the logo of the Maison, our shipping is always EXPRESS, 24 working hours for Italy and 2/
-      4 working days for any other country in the world.
-      <br>
-      Identità S.R.L. has many more additional service and options both online and offline like the ÉLITE program and
-      the Flash Sales.
-      <br>
-      Chic, glamour, bon ton, pop, soft,luxury, the brand style is charming and it will be charming in every single
-      creation.
-
-
-    </p></div>
+    <p style="font-size: 14px; line-height: 20px;font-weight: 300">
+      Everyone asked to himself this question at least once in life, the answer
+      we found looking back on our history can be resumed in the Gracian quote :
+      "Passion colors everything it touches.”
+      <br/>
+      <br/>
+      Starting from the crafted production where every single shoes is refined
+      by hand passing by the obsessive research of the finest material crossing
+      the deepest desire of woman, with the unique packaging, every single shoes
+      is an experience of style.
+      <br/>
+      <br/>
+      Identità srl is created in the headquarter of Trani ( bt) in the
+      departments of graphic, customer service, marketing e buying. Our
+      production is made all around Italy, by the best crafters.
+      <br/>
+      <br/>
+      Orders are shipped world wide from our warehouses in box made with the
+      maximum of the attention to every detail, with our certification of
+      autenticity, dust bag and accessories.
+      <br/>
+      <br/>
+      The box is branded with the logo of the Maison, our shipping is always
+      EXPRESS, 24 working hours for Italy and 2/ 4 working days for any other
+      country in the world.
+      <br/>
+      <br/>
+      Identità S.R.L. has many more additional service and options both online
+      and offline like the ÉLITE program and the Flash Sales.
+      <br/>
+      <br/>
+      Chic, glamour, bon ton, pop, soft,luxury, the brand style is charming and
+      it will be charming in every single creation.
+    </p>
+  </div>
 </div>
