--- a/src/app/core/components/product-detail-text/product-detail-text.component.scss
+++ b/src/app/core/components/product-detail-text/product-detail-text.component.scss
@@ -37,6 +37,11 @@
     &-selected {
       background: lightgray;
     }
+
+    &-disabled{
+      opacity: 0.7;
+      cursor: not-allowed;
+    }
   }
 }
 
