[responsive fix,toobar back button,email snack] * email snack bar notification * toolbar back button navigation / window.history.back() * responsive fixes...

--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,11 +1,16 @@
 <div class="container-fluid">
-  <div class="container toolbar-top d-flex justify-content-between">
-    <div class="col-lg-3">
+  <div class="container toolbar-top d-flex justify-content-between align-items-center">
+    <div class="col-lg-3" *ngIf="innerWidth>768">
       <p style="font-size: 12px">Language option</p>
     </div>
-    <div class="toolbar-logo d-flex justify-content-center">
+    <div class="col-lg-3" *ngIf="innerWidth<=768">
+<!--      <p style="font-size: 12px" ><</p>-->
+      <img src="assets/img/left-chevron.svg" (click)="goBack()" alt="lapista go back" style="max-height: 20px;min-height: 15px">
+    </div>
+
+    <div class="toolbar-logo d-flex justify-content-center col-lg-6">
 <!--      <img src="assets/img/lapista-logo.jpg" alt="lapista-logo" class="img-fluid">-->
-      <img src="assets/img/LaPista-Logo-main.png" alt="lapista-logo" class="img-fluid" style="max-height: 40px">
+      <img src="assets/img/LaPista-Logo-main.png" alt="lapista-logo" class="img-fluid" style="max-height: 40px;object-fit: contain">
     </div>
 
     <div class="col-lg-3 d-flex justify-content-end">
@@ -13,7 +18,7 @@
     </div>
   </div>
 
-  <div class="toolbar-container d-flex justify-content-center">
+  <div class="toolbar-container d-flex justify-content-center" *ngIf="innerWidth>768">
     <div class="toolbar-main-menu d-flex flex-grow-1 justify-content-center">
       <p class="toolbar-main-menu-item" *ngFor="let m of menu"
          [routerLink]="m.route"
