--- a/src/app/modules/product-detail/pages/product-detail.component.html
+++ b/src/app/modules/product-detail/pages/product-detail.component.html
@@ -1,11 +1,11 @@
 <div class="container-fluid mt-5">
   <div class="container">
     <div class="col-lg-12 d-flex flex-wrap" *ngIf="singleDataObject && detailImage">
-      <div class="col-lg-6 w-50 d-flex align-items-center justify-content-center">
+      <div class="col-lg-6 d-flex align-items-center justify-content-center">
         <app-product-img [detailImage]="detailImage">
         </app-product-img>
       </div>
-      <div class="col-lg-6 w-50">
+      <div class="col-lg-6">
         <app-product-text
           [detailText]="singleDataObject"
         ></app-product-text>
