--- a/src/app/modules/admin/pages/admin.component.html
+++ b/src/app/modules/admin/pages/admin.component.html
@@ -1,1 +1,188 @@
-<p>Admin works</p>
+<mat-sidenav-container class="sidenav-container">
+  <mat-sidenav
+    style="width: 250px;"
+    #drawer
+    class="sidenav"
+    fixedInViewport="true"
+    [attr.role]="'dialog'"
+    [mode]="'side'"
+    opened
+  >
+    <mat-toolbar>
+      <img src="assets/img/LaPista-Logo-main.png" alt="" height="20px" />
+      <!--      <p>iComp</p>-->
+    </mat-toolbar>
+    <mat-nav-list>
+      <!--
+      example
+      <mat-list-item
+        [routerLinkActive]="['active']"
+        [routerLinkActiveOptions]="{exact:true}"
+        routerLink="/"
+      >
+        <a matLine>Kategorije</a>
+        <button mat-icon-button>
+          <mat-icon>home</mat-icon>
+        </button>
+      </mat-list-item>
+      -->
+
+      <mat-list-item (click)="getDataForSelected('category')">
+        <a matLine>Kategorije</a>
+        <button mat-icon-button>
+          <mat-icon>home</mat-icon>
+        </button>
+      </mat-list-item>
+
+      <mat-list-item (click)="getDataForSelected('item')">
+        <a matLine>Proizvodi</a>
+      </mat-list-item>
+
+      <mat-list-item (click)="getDataForSelected('color')">
+        <a matLine>Boje</a>
+      </mat-list-item>
+
+      <mat-list-item (click)="getDataForSelected('size')">
+        <a matLine>Velicine</a>
+      </mat-list-item>
+    </mat-nav-list>
+  </mat-sidenav>
+  <!-- CONTENT -->
+  <mat-sidenav-content>
+    <mat-toolbar class="toolbar-main justify-content-between">
+      <div class="d-flex flex-row align-items-center">
+        <button
+          type="button"
+          aria-label="Toggle sidenav"
+          mat-icon-button
+          (click)="drawer.toggle()"
+        >
+          <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        </button>
+        <p class="m-0 p-0">Admin Panel</p>
+      </div>
+
+      <!-- Add new -->
+      <button
+        type="button"
+        aria-label="Toggle sidenav"
+        mat-icon-button
+        (click)="openCreateModal(selectedData)"
+      >
+        <mat-icon aria-label="Side nav toggle icon">add_circle_outline</mat-icon>
+      </button>
+    </mat-toolbar>
+
+    <div class="container-fluid">
+      <div class="col-12">
+        <!-- category table -->
+        <table class="table" *ngIf="selectedData === 'category'">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Name</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let a of dataSource">
+              <th scope="row">{{ a.id }}</th>
+              <td>{{ a.name }}</td>
+              <td>
+                <button type="button" class="btn btn-danger" (click)="openEditModal('category' , a.id)">Edit category</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- category table -->
+
+        <!-- prod table -->
+        <table class="table" *ngIf="selectedData === 'item'">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Name</th>
+              <th scope="col">Image</th>
+              <th scope="col">Price</th>
+              <th scope="col">Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let p of dataSource">
+              <th scope="row">{{ p.id }}</th>
+              <td>{{ p.name }}</td>
+              <td>{{ p.image }}</td>
+              <td>{{ p.price }}</td>
+              <td>{{ p.description }}</td>
+              <td>
+                <button type="button" class="btn btn-danger" (click)="openEditModal('item' , p.id)">Edit item</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- prod table -->
+
+        <!-- colors table -->
+        <table class="table" *ngIf="selectedData === 'color'">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">ColorHex</th>
+              <th scope="col">Name</th>
+              <th scope="col">Image</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let c of dataSource">
+              <th scope="row">{{ c.id }}</th>
+              <td>{{ c.hex }}</td>
+              <td>{{ c.name }}</td>
+              <td>{{ c.image }}</td>
+              <td>
+                <button type="button" class="btn btn-danger" (click)="openEditModal('color' , c.id)">Edit color</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- colors table -->
+
+        <!-- sizes table -->
+        <table class="table" *ngIf="selectedData === 'size'">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">Size Count</th>
+              <th scope="col">Size Name</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let s of dataSource">
+              <th scope="row">{{ s.id }}</th>
+              <td>{{ s.sizeCount }}</td>
+              <td>{{ s.sizeName }}</td>
+              <td>
+                <button type="button" class="btn btn-danger" (click)="openEditModal('size' , s.id)">Edit size</button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <!-- sizes table -->
+      </div>
+    </div>
+  </mat-sidenav-content>
+  <!-- CONTENT -->
+</mat-sidenav-container>
+
+<!--<div-->
+<!--  class="position-absolute"-->
+<!--  style="-->
+<!--    top: 10px;-->
+<!--    right: 10px;-->
+<!--    z-index: 50;-->
+<!--    background: red;-->
+<!--    border-radius: 50px;-->
+<!--    padding: 10px;-->
+<!--    cursor: pointer;-->
+<!--  "-->
+<!--&gt;-->
+<!--  Add-->
+<!--</div>-->
