[Cart number] * count items in cart

--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -13,8 +13,9 @@
       <img src="assets/img/LaPista-Logo-main.png" alt="lapista-logo" class="img-fluid" style="max-height: 40px;object-fit: contain">
     </div>
 
-    <div class="col-lg-3 d-flex justify-content-end">
-      <img src="https://identitashoes.it/shop.png" alt="" class="img-fluid" style="height: 20px">
+    <div class="col-lg-3 d-flex justify-content-end m-0 p-0">
+      <img src="https://identitashoes.it/shop.png" alt="" class="img-fluid position-relative" style="height: 25px">
+      <span class="count-in-cart">{{returnCountInCart()}}</span>
     </div>
   </div>
 
