--- a/src/app/core/components/toolbar/toolbar.component.scss
+++ b/src/app/core/components/toolbar/toolbar.component.scss
@@ -31,3 +31,15 @@
     }
   }
 }
+.count-in-cart{
+  position: absolute;
+  bottom: -8px;
+  //right: -8px;
+  background: red;
+  border-radius: 20px;
+  width: 16px;
+  height: 16px;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+}
