--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="container toolbar-top d-flex justify-content-between align-items-center">
-    <div class="col-lg-3" *ngIf="innerWidth>768">
+    <div style="max-width: 25px;" *ngIf="innerWidth>768">
       <p style="font-size: 12px">Language option</p>
     </div>
     <div class="col-lg-3" *ngIf="innerWidth<=768">
@@ -8,14 +8,15 @@
       <img src="assets/img/left-chevron.svg" (click)="goBack()" alt="lapista go back" style="max-height: 20px;min-height: 15px">
     </div>
 
-    <div class="toolbar-logo d-flex justify-content-center col-lg-6">
+    <div class="toolbar-logo d-flex justify-content-center col-lg-6" [routerLink]="'/'" style="cursor:pointer;">
 <!--      <img src="assets/img/lapista-logo.jpg" alt="lapista-logo" class="img-fluid">-->
       <img src="assets/img/LaPista-Logo-main.png" alt="lapista-logo" class="img-fluid" style="max-height: 40px;object-fit: contain">
     </div>
 
-    <div class="col-lg-3 d-flex justify-content-end m-0 p-0">
+<!-- cart -->
+    <div class="d-flex justify-content-end m-0 p-0 position-relative" [routerLink]="'/cart'" style="cursor: pointer">
       <img src="https://identitashoes.it/shop.png" alt="" class="img-fluid position-relative" style="height: 25px">
-      <span class="count-in-cart">{{returnCountInCart()}}</span>
+      <span class="count-in-cart" *ngIf="returnCountInCart()>0">{{returnCountInCart()}}</span>
     </div>
   </div>
 
