--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -10,7 +10,7 @@
 
     <div class="toolbar-logo d-flex justify-content-center col-lg-6" [routerLink]="'/'" style="cursor:pointer;">
 <!--      <img src="assets/img/lapista-logo.jpg" alt="lapista-logo" class="img-fluid">-->
-      <img src="assets/img/LaPista-Logo-main.png" alt="lapista-logo" class="img-fluid" style="max-height: 40px;object-fit: contain">
+      <img src="assets/img/lapista-logo.jpg" alt="lapista-logo" class="img-fluid" style="max-height: 120px;object-fit: contain">
     </div>
 
 <!-- cart -->
