--- a/src/app/modules/admin/pages/admin.component.html
+++ b/src/app/modules/admin/pages/admin.component.html
@@ -87,8 +87,11 @@
             <tr *ngFor="let a of dataSource">
               <th scope="row">{{ a.id }}</th>
               <td>{{ a.name }}</td>
-              <td>
-                <button type="button" class="btn btn-danger" (click)="openEditModal('category' , a.id)">Edit category</button>
+              <td class="edit-td">
+                <button type="button" class="btn btn-info" (click)="openEditModal('category' , a.id)">Edit</button>
+              </td>
+              <td class="delete-td">
+                <button type="button" class="btn btn-danger" (click)="deleteItem('category' , a.id)">Delete</button>
               </td>
             </tr>
           </tbody>
@@ -100,6 +103,7 @@
           <thead>
             <tr>
               <th scope="col">ID</th>
+              <th scope="col">Category</th>
               <th scope="col">Name</th>
               <th scope="col">Image</th>
               <th scope="col">Price</th>
@@ -109,12 +113,16 @@
           <tbody>
             <tr *ngFor="let p of dataSource">
               <th scope="row">{{ p.id }}</th>
-              <td>{{ p.name }}</td>
-              <td>{{ p.image }}</td>
-              <td>{{ p.price }}</td>
-              <td>{{ p.description }}</td>
-              <td>
-                <button type="button" class="btn btn-danger" (click)="openEditModal('item' , p.id)">Edit item</button>
+              <td>{{ p?.category?.name }}</td>
+              <td>{{ p?.name }}</td>
+              <td>{{ p?.image }}</td>
+              <td>{{ p?.price }}</td>
+              <td>{{ p?.description }}</td>
+              <td class="edit-td">
+                <button type="button" class="btn btn-info" (click)="openEditModal('item' , p.id)">Edit</button>
+              </td>
+              <td class="delete-td">
+                <button type="button" class="btn btn-danger" (click)="deleteItem('item' , p.id)">Delete</button>
               </td>
             </tr>
           </tbody>
@@ -126,6 +134,7 @@
           <thead>
             <tr>
               <th scope="col">ID</th>
+              <th scope="col">Item</th>
               <th scope="col">ColorHex</th>
               <th scope="col">Name</th>
               <th scope="col">Image</th>
@@ -134,11 +143,15 @@
           <tbody>
             <tr *ngFor="let c of dataSource">
               <th scope="row">{{ c.id }}</th>
+              <th scope="row">{{ c.item?.name }}</th>
               <td>{{ c.hex }}</td>
               <td>{{ c.name }}</td>
               <td>{{ c.image }}</td>
-              <td>
-                <button type="button" class="btn btn-danger" (click)="openEditModal('color' , c.id)">Edit color</button>
+              <td class="edit-td">
+                <button type="button" class="btn btn-info" (click)="openEditModal('color' , c.id)">Edit</button>
+              </td>
+              <td class="delete-td">
+                <button type="button" class="btn btn-danger" (click)="deleteItem('color' , c.id)">Delete</button>
               </td>
             </tr>
           </tbody>
@@ -150,6 +163,8 @@
           <thead>
             <tr>
               <th scope="col">ID</th>
+              <th scope="col">Color</th>
+              <th scope="col">Item</th>
               <th scope="col">Size Count</th>
               <th scope="col">Size Name</th>
             </tr>
@@ -157,10 +172,15 @@
           <tbody>
             <tr *ngFor="let s of dataSource">
               <th scope="row">{{ s.id }}</th>
+              <th scope="row">{{ s.color?.name }}</th>
+              <th scope="row">{{ s.color?.item?.name }}</th>
               <td>{{ s.sizeCount }}</td>
               <td>{{ s.sizeName }}</td>
-              <td>
-                <button type="button" class="btn btn-danger" (click)="openEditModal('size' , s.id)">Edit size</button>
+              <td class="edit-td">
+                <button type="button" class="btn btn-info" (click)="openEditModal('size' , s.id)">Edit</button>
+              </td>
+              <td class="delete-td">
+                <button type="button" class="btn btn-danger" (click)="deleteItem('size' , s.id)">Delete</button>
               </td>
             </tr>
           </tbody>
@@ -171,18 +191,3 @@
   </mat-sidenav-content>
   <!-- CONTENT -->
 </mat-sidenav-container>
-
-<!--<div-->
-<!--  class="position-absolute"-->
-<!--  style="-->
-<!--    top: 10px;-->
-<!--    right: 10px;-->
-<!--    z-index: 50;-->
-<!--    background: red;-->
-<!--    border-radius: 50px;-->
-<!--    padding: 10px;-->
-<!--    cursor: pointer;-->
-<!--  "-->
-<!--&gt;-->
-<!--  Add-->
-<!--</div>-->
