[logo,toolbar,footer] * logo 2 versions * footer fix style * toolbar fix style/mobile

--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -29,5 +29,5 @@
   </div>
 </div>
 <div class="container-fluid text-center d-flex align-items-center justify-content-center" style="border-top: 1px solid #606060;height: 40px">
-  <p style="font-size: 12px;">© Copyright 2019 - Identità s.r.l - P.IVA 07966160728</p>
+  <p style="font-size: 12px;margin: 0;padding: 0">© Copyright 2020 - LaPista</p>
 </div>
