--- a/src/app/core/components/toolbar/toolbar.component.html
+++ b/src/app/core/components/toolbar/toolbar.component.html
@@ -1,21 +1,27 @@
 <div class="container-fluid">
-  <div class="container toolbar-top d-flex justify-content-between align-items-center">
+  <div class="toolbar-top d-flex justify-content-between align-items-center">
     <div style="max-width: 25px;" *ngIf="innerWidth>768">
       <p style="font-size: 12px">Language option</p>
     </div>
-    <div class="col-lg-3" *ngIf="innerWidth<=768">
-<!--      <p style="font-size: 12px" ><</p>-->
+
+    <div class="d-flex" *ngIf="innerWidth<=768" style="width: 20px">
       <img src="assets/img/left-chevron.svg" (click)="goBack()" alt="lapista go back" style="max-height: 20px;min-height: 15px">
     </div>
-
     <div class="toolbar-logo d-flex justify-content-center col-lg-6" [routerLink]="'/'" style="cursor:pointer;">
-<!--      <img src="assets/img/lapista-logo.jpg" alt="lapista-logo" class="img-fluid">-->
-      <img src="assets/img/lapista-logo.jpg" alt="lapista-logo" class="img-fluid" style="max-height: 120px;object-fit: contain">
+      <img src="assets/img/svg/lapista-logo-desktop.svg"
+           *ngIf="innerWidth>=500"
+           alt="lapista-logo"
+           class="img-fluid"
+           style="max-height: 120px;object-fit: contain">
+      <img src="assets/img/svg/lapista-logo-mobile.svg"
+           *ngIf="innerWidth<500"
+           alt="lapista-logo"
+           class="img-fluid"
+           style="max-height: 40px;max-width:200px;object-fit: contain">
     </div>
-
 <!-- cart -->
     <div class="d-flex justify-content-end m-0 p-0 position-relative" [routerLink]="'/cart'" style="cursor: pointer">
-      <img src="https://identitashoes.it/shop.png" alt="" class="img-fluid position-relative" style="height: 25px">
+      <img src="https://identitashoes.it/shop.png" alt="" class="img-fluid position-relative cart-image" style="height: 25px">
       <span class="count-in-cart" *ngIf="returnCountInCart()>0">{{returnCountInCart()}}</span>
     </div>
   </div>
