--- a/src/app/modules/cart/pages/cart.component.html
+++ b/src/app/modules/cart/pages/cart.component.html
@@ -3,20 +3,19 @@
     <h2>Shopping bag</h2>
   </div>
 
-  <div class="container shopping-cart-container">
+  <div class="container shopping-cart-container d-flex flex-column align-items-center">
     <div
-      class="col-12 d-flex shopping-cart-item"
+      class="col-8 d-flex shopping-cart-item"
       *ngFor="let item of shoppingItems"
     >
-      <div class="col-lg-7" style="max-height: 250px;">
+      <div class="col-lg-7 shopping-cart-item-image">
         <img
           [src]="item.image"
           alt=""
           class="img-fluid"
-          style="height: 100%;"
         />
       </div>
-      <div class="col-lg-5 d-flex flex-column shopping-item-info">
+      <div class="col-lg-5 d-flex flex-column shopping-cart-item-info">
         <span>Name:
           <p>{{ item.name }}</p>
         </span>
@@ -34,11 +33,14 @@
         </span>
       </div>
     </div>
+    <div class="d-flex col-lg-8 flex-grow-1 justify-content-end m-0 p-0">
+      <button (click)="deleteLocalStorage()">Delete all</button>
+    </div>
   </div>
 
-  <div class="container d-flex justify-content-end">
-    <button (click)="deleteLocalStorage()">Delete all</button>
-  </div>
+<!--  <div class="container d-flex justify-content-end">-->
+<!--    <button (click)="deleteLocalStorage()">Delete all</button>-->
+<!--  </div>-->
 
 
 </div>
