--- a/src/app/modules/contact/pages/contact.component.scss
+++ b/src/app/modules/contact/pages/contact.component.scss
@@ -1,11 +1,12 @@
-.col-lg-4.col-md-6 {
-  padding-top: 15px;
-  a {
-    font-size: 12px;
-  }
-}
+//.col-lg-4.col-md-6 {
+//  padding-top: 15px;
+//  a {
+//    font-size: 12px;
+//  }
+//}
+//
+//.col-lg-4:nth-of-type(2) {
+//  border-left: 10px solid #F4F4F4;
+//  border-right: 10px solid #F4F4F4;
+//}
 
-.col-lg-4:nth-of-type(2) {
-  border-left: 10px solid #F4F4F4;
-  border-right: 10px solid #F4F4F4;
-}
